# partialdebug

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
partialdebug-derive/: Cargo.toml
partialdebug-derive/src/: lib.rs
src/: lib.rs  no_specialization.rs  specialization.rs
tests/: hygiene.rs  placeholder.rs  test_non_exhaustive.rs  test_type_info.rs
